[package]
name = "prime_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
serde_json = { version = "1.0", features = ["arbitrary_precision"]}
serde = { version = "1.0", features = ["derive"] }
is_prime = "2.0.9"
num-bigint = { version = "0.4.3", features = ["serde"] }